--- a/src/app/components/home-item-card/home-item-card.component.scss
+++ b/src/app/components/home-item-card/home-item-card.component.scss
@@ -14,6 +14,8 @@
   margin: 0;
   overflow: hidden;
   position: relative;
+  background-color: var(--ion-color-light);
+  color: var(--ion-color-light-contrast);
 
   &:hover{
     .img-container{
@@ -57,7 +59,8 @@
     width: 100%;
     transform: translateX(-100%);
     transition: all .5s ease-in;
-    background-color: #333;
+    background-color: red;
+    background-color: rgba(var(--ion-color-dark-rgb), 0.5);
   }
 
   
