--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header [translucent]="false">
-  <ion-toolbar>
+  <ion-toolbar color="light">
     <ion-title>
       Components
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light">
   <div class="ion-padding" style="width: 90%; margin: 0 auto;">
 
     <div class="files">
