--- a/src/app/components/edit-goods/edit-goods.component.scss
+++ b/src/app/components/edit-goods/edit-goods.component.scss
@@ -2,6 +2,8 @@
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
+  background-color: var(--ion-color-light);
+  color: var(--ion-color-light-contrast);
 
   @media(min-width: 768px) {
     &{
@@ -15,44 +17,6 @@
   max-width: 900px;
   margin: 0 auto;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
-
-  .top-form{
-    height: 250px;
-    width: 100%;
-    border-bottom-left-radius: 40%;
-    background-color: var(--ion-color-primary);
-    position: relative;
-
-    .img-container{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      position: absolute;
-      top: 50px;
-      left: 50%;
-      transform: translateX(-50%);
-
-      .img{
-        height: 60px;
-        width: 60px;
-        border: 2px solid #fff;
-        border-radius: 50%;
-        padding: 2px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        
-        img{
-          height: 90%;
-          width: 90%;
-          object-fit: contain;
-          object-position: center;
-        }
-      }
-    }
-  }
 
   .title{
     position: absolute;
@@ -70,6 +34,33 @@
 
   .input-full-width{
     width: 100%;
+  }
+
+  .logo-container{
+    ion-avatar{
+      height: 150px;
+      width: 150px;
+      margin: 0 auto;
+      background-color: var(--ion-color-medium);
+      position: relative;
+
+      mat-icon{
+        font-size: 70px;
+        color: var(--ion-color-light);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        display: block;
+        transform: translate(-130%, -150%);
+      }
+
+      ion-img{
+        object-fit: cover;
+        object-position: center;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   .btn-container{
