--- a/src/app/components/error-viewer/error-viewer.component.scss
+++ b/src/app/components/error-viewer/error-viewer.component.scss
@@ -1,5 +1,8 @@
 .error-container{
 
+  background-color: var(--ion-color-light);
+  color: var(--ion-color-light-contrast);
+
   .title{
     font-weight: 600;
     font-size: 40px;
