--- a/src/app/components/goods-details/goods-details.component.html
+++ b/src/app/components/goods-details/goods-details.component.html
@@ -53,7 +53,7 @@
         ></app-profile-viewer>
         
         <div class="secondary-content" style="height: 200px;">
-          <div class="toolbar" style="background-color: var(--ion-color-primary);">
+          <div class="toolbar">
             <h2>
               <strong>Specification</strong>
             </h2>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="secondary-content" style="height: 200px;">
-          <div class="toolbar" style="background-color: var(--ion-color-primary);">
+          <div class="toolbar">
             <h2>
               <strong>Review Shop</strong>
             </h2>
