--- a/src/app/components/goods-details/goods-details.component.scss
+++ b/src/app/components/goods-details/goods-details.component.scss
@@ -1,5 +1,6 @@
 .container{
   background-color: var(--ion-color-light);
+  color: var(--ion-color-light-contrast);
 
   .toolbar{
     width: 100%;
@@ -8,7 +9,9 @@
     align-items: center;
     justify-content: flex-start;
     padding: 0 10px;
-    color: #fff;
+    background-color: var(--ion-color-toolbar);
+    color: var(--ion-color-toolbar-contrast);
+    box-shadow: 0 7px 10px 0 rgba(0, 0, 0, .2);
   }
 
   @media(min-width: 768px) {
@@ -36,12 +39,12 @@
   
   .secondary-content{
     margin-bottom: 40px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
   }
 
   @media (min-width: 768px) {
-    .secondary-content{
-      box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
-    }
+    // .secondary-content{
+    // }
   }
 }
 
@@ -80,8 +83,18 @@
   }
 
   .tips{
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
+    padding-bottom: 20px;
+    margin-bottom: 60px;
+
     ul li{
       margin: 30px 0;
+    }
+
+    @media (min-width: 768px) {
+      &{
+        margin-bottom: 0;
+      }
     }
   }
   
