--- a/src/app/components/helpers/file-select/file-select.component.scss
+++ b/src/app/components/helpers/file-select/file-select.component.scss
@@ -8,6 +8,7 @@
   cursor: pointer;
   text-decoration: none;
   margin: 10px 0;
+  background-color: var(--ion-color-light);
  
   .icon{
     display: flex;
