--- a/src/app/components/home-category-card/home-category-card.component.scss
+++ b/src/app/components/home-category-card/home-category-card.component.scss
@@ -4,6 +4,8 @@
   max-width: 300px;
   color: #333;
   border: #bbb 1px solid;
+  background-color: var(--ion-color-light);
+  color: var(--ion-color-light-contrast);
   text-decoration: none;
   display: inline-block;
   display: flex;
