--- a/src/app/components/no-content-viewer/no-content-viewer.component.scss
+++ b/src/app/components/no-content-viewer/no-content-viewer.component.scss
@@ -1,4 +1,6 @@
 .no-data{
+  background-color: var(--ion-color-light);
+  color: var(--ion-color-light-contrast);
   display: flex;
   justify-content: center;
   align-items: center;
