--- a/src/app/components/profile-viewer/profile-viewer.component.html
+++ b/src/app/components/profile-viewer/profile-viewer.component.html
@@ -1,5 +1,5 @@
 <div class="seller-details">
-  <div class="toolbar" style="background-color: var(--ion-color-primary);">
+  <div class="toolbar">
     <h2>
       <strong>Contact Seller</strong>
     </h2>
